[tool.poetry]
name = "openai-code-interpreter-demo"
version = "0.1.0"
description = ""
authors = ["seiya303"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.23.3"
streamlit = "^1.33.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"

[tool.mypy]
python_version = "3.11"
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
strict_optional = true
disallow_untyped_defs = true
check_untyped_defs = true
disable_error_code = "misc"
allow_redefinition = false
allow_untyped_globals = false
color_output = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
error_summary = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
strict = true
warn_no_return = true
exclude = ["^.vscode/"]


[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "__pycache__",
]

line-length = 100
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
# Which rules of PEP8 to issue warnings for
select = [
    "C",
    "E",
    "F",
    "W",
]
ignore = [
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
